# StemCNV-check

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  DESCRIPTION  LICENSE  Notes.txt  ProgressPlan.md  README.md  StemCNV-check.py  StemCNV-check.smk  allowedvalues_config.yaml  cnv-pipeline.py  cnv-pipeline.smk  cnv-pipeline.snake  cnv-snakefile  cnv-snakefile.py  conda_env.yaml  config.yaml  default_config.yaml  install.sh  pyproject.toml  sample_table.txt  sample_table_example.txt  scnv-quac.py  scnv-quac.smk  static_file_generation.md  staticdata_creation.smk
.github/ISSUE_TEMPLATE/: other.md
.github/envs/: datavzrd.yaml
.github/workflows/: ci.yml  datavzrd-gh-pages.yml
StemCNV-check/: StemCNV-check.smk  allowedvalues_config.yaml  default_config.yaml
StemCNV-check/envs/: StemCNV-check.yaml  general-R.yaml
StemCNV-check/scripts/: R_io_functions.R  R_table_functions.R  knit_report.R  process_CNV_calls.R  report_template.Rmd  run_CBS_DNAcopy.R
StemCNV-check/supplemental-files/: HighImpact-stemcell-hotspots.tsv  genelist-cancer-hotspots.tsv
docs/: Makefile  conf.py  requirements.txt
docs/datavzrd/: config.yaml
docs/source/: basics_installation.rst  basics_nonlinux.rst  basics_output_files.rst  basics_usage.rst  conf.py  config.rst  config_parameters.rst  example_data.rst  first_run.rst  index.rst  installation.rst  intro_quickstart.rst  intro_workflow.rst  introduction.rst  issues_common.rst  issues_faq.rst  issues_intro.rst  issues_support.rst  labels.rst  report_analysis.rst  running.rst  sample_table.rst  setup_project.rst  steps1_nonlinux.rst  steps2_installation.rst  steps3_basic_usage.rst  steps4_example_data.rst  steps5_report_analysis.rst  steps_ext_project_setup.rst  tech_cache.rst  tech_cmd_line.rst  tech_config.rst  tech_labels.rst  tech_output_files.rst  tech_sample_table.rst  tech_workflow.rst  trouble_shooting.rst  tut_example_data.rst  tut_project_setup.rst  tut_report_analysis.rst  (+1 more)
envs/: StemCNV-check-base-dependencies  base.yaml  general-R.yaml  gtc2vcf.yaml
example_data/: config.yaml  sample_table.tsv
scripts/: CNV_report.Rmd  R_functions.R  R_io_functions.R  R_plotting_functions.R  R_processing_functions.R  R_table_functions.R  cluster_samples_SNP.R  filter_data.R  knit_report.R  make_PFB_from_vcf.R  make_cnv_vcf.R  process_CNV_calls.R  py_exceptions.py  py_helpers.py  report_template.Rmd  run_CBS_DNAcopy.R  run_GADA.R
src/stemcnv_check/: __init__.py  __main__.py  helpers.py
stemcnv_check/: __init__.py  __main__.py  exceptions.py  helpers.py
stemcnv_check/app/: check_input.py  make_staticdata.py  run_workflow.py  setup_files.py
stemcnv_check/control_files/: allowedvalues_config.yaml  default_config.yaml  label_name_definitions.yaml  sample_table_example.tsv  sample_table_example.txt
stemcnv_check/envs/: StemCNV-check.yaml  general-R.yaml  python-vcf.yaml  snp-annotation.yaml  vembrane.yaml  vep-annotation.yaml
stemcnv_check/rules/: SNP_processing.smk  StemCNV-check.smk  common.smk  illumina_raw_processing.smk  penncnv.smk  report_generation.smk  static_creation_array_definition.smk  static_creation_global_files.smk  staticdata_creation.smk
stemcnv_check/scripts/: SNV_analysis.R  collate_cnv_calls.R  combine_penncnv.R  common.R  filter_snp_vcf.py  knit_report.R  make_cnv_vcf.R  process_CNV_calls.R  report_template.Rmd  run_CBS_DNAcopy.R  summarise_stats.R
stemcnv_check/supplemental-files/: HighImpact-stemcell-hotspots.tsv  genelist-cancer-drivers.tsv  penncnv-makefile
supplemental-files/: HighImpact-stemcell-hotspots.tsv  HighImpact-stemcell-hotspots.yaml  genelist-cancer-drivers.tsv  genelist-cancer-drivers.yaml  genelist-cancer-hotspots.tsv  genelist-cancer-hotspots.yaml  install.sh
test_data/: config.yaml  sample_table.txt
test_data/static-data/: GSAMD-24v3-0-EA_20034606_A1.bpm  GSAMD-24v3-0-EA_20034606_A1.egt
tests/: conftest.py  requirements.txt  test_app_check_input.py  test_helpers.py  test_main.py
tests/data/: density_minimal.bed  gaps_minimal.bed  gr_info_minimal.tsv  hg_minimal.gtf  minimal-cnvs.vcf  minimal-hotspots.tsv  minimal-snv-hotspots.tsv  minimal_precision.tsv  minimal_probes.vcf  minimal_probes_annotated.vcf  precision_estinates_minimal.tsv  sample_table.xlsx  sample_table_example.xlsx
tests/testthat/: helper_combined_cnv_data.R  helper_fixtures.R  test_CNV_annotation_functions.R  test_CNV_comparison_functions.R  test_CNV_preprocess_functions.R  test_SNV_analysis_functions.R  test_calls_prefilter_merge.R  (+17 more)
(+95 files in other folders)
